--- a/example/example-requirejs.html
+++ b/example/example-requirejs.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title>Test VAST-UI</title>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+
     </head>
     <body>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2/require.min.js"></script>
+
         <script>
             require(['dashboard'], function(dashboard){
                 dashboard();
