Add bundle of jquery and semantic for distribution.

--- a/example/index.html
+++ b/example/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dashi Demo Example</title>
+        <title>Dashi Demo App</title>
         <link rel="stylesheet" href="../dist/dashi.css">
-
     </head>
     <body>
-        <script src="../dist/dashi.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script> -->
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.js"></script> -->
+        <!-- <script src="../dist/dashi.min.js"></script> -->
+        <script src="../dist/dashi.bundle.semantic-jquery.min.js"></script>
         <script src="dashboard.js"></script>
     </body>
 </html>
